Bug 1250323 - Don't hide overflow-y on the pseudo class panel r=pbro

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -167,7 +167,6 @@
   cursor: pointer;
   white-space: nowrap;
   display: flex;
-  align-self: flex-start;
   text-decoration: none;
   font-size: 11px;
   width: 12em; /* probably should be changed for each tool */
