--- a/devtools/client/themes/fonts.css
+++ b/devtools/client/themes/fonts.css
@@ -11,10 +11,13 @@
   height: 100%;
 }
 
+#sidebar-panel-fontinspector > .devtools-toolbar {
+  display: flex;
+}
+
 #font-container {
   overflow: auto;
   flex: auto;
-  height: 0px;
 }
 
 #all-fonts {
